[metadata]
name=deepthought
description=deepthought,
long-description= file: README.md
author=Daniel Correia,
author_email=dan.reia@gmail.com,

[options]
packages= find:
zip_safe = false
include_package_data = true
python_requires = >= 3.8
test_suite = tests
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    torch

    

[options.extras_require]
test =
    flake8==3.7.9
    pycodestyle==2.5.0
    coverage==5.0.4
    pytest>=5.4.3,<6
    pytest-html>=2.1.1,<3
    pytest-cov>=2.10.0,<3
    pytest-black>=0.3.10,<1
build =
    coloredlogs >=14,<15
    Sphinx==2.3.1
    sphinx-book-theme


[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[tool:pytest]
addopts=
    ./tests
    # -s
    -v
    # --html tests/reports/report.html
    # --self-contained-html
    # --cov ./
    # --cov-report html:tests/reports/coverage
    # --cov-report term
    # --junitxml tests/reports/junit.xml
    --black
junit_family=xunit2

[coverage:run]
omit=
    */tests/*
    *__init__*
    *examples/*
    *setup.py*
    *docs/*
branch = True
concurrency=multiprocessing

[coverage:report]
omit=
    */tests/*
    *__init__*
    *examples/*
    *setup.py*
    *docs/*
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
fail_under=10

[covergae:html]
directory=tests/reports/coverage
[flake8]
exclude =
    # No need to traverse our git directory
    .gitignore,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/source/conf.py,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist,

#max-complexity = 10
max-line-length = 200

[build_sphinx]
project = Deep Thought
source-dir = docs/source
build-dir = docs/build